# divvunspell-libreoffice

./: .gitignore  .taskcluster.yml  LICENSE-MIT  README.md  derive-locales.js  entry.py  make-oxt-linux.sh  make-oxt-macos.sh  make-oxt-windows.ps1
.github/workflows/: ci.yaml
docs/: index.md
macos/: Info.plist  build.sh  dist.xml
macos/scripts/: postinstall
native/: DivvunProofreader.cxx  DivvunProofreader.hxx  DivvunSpellChecker.cxx  DivvunSpellChecker.hxx  Engine.cxx  Engine.hxx  ErrorClass.hxx  Makefile  Makefile.linux  Platform.cxx  Platform.hxx  RuntimeBridge.cxx  RuntimeBridge.hxx  SettingsDialog.cxx  SettingsDialog.hxx  build.ps1  component.cxx
oxtreg/: Cargo.toml
oxtreg/src/: main.rs  oxt.rs  pmap.rs  registry.rs
src/: DivvunSpell.components  description.xml  entry.py  locales.json
src/dialogs/: DivvunSettings.xdl
src/pythonpath/: grammar.py  spelling.py  utils.py
src/registry/data/org/openoffice/Office/: OptionsDialog.xcu
src/registry/schema/org/openoffice/Office/: DivvunSpell.xcs
tools/: regen-vendor-headers.sh
